# duru

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  demo.tape  install.sh  record-demo.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-drafter.yml  release.yml
examples/: bench_scan.rs  screenshot.rs
src/: app.rs  hook_scripts.rs  hooks_install.rs  main.rs  markdown.rs  registry.rs  scan.rs  secrets.rs  sessions.rs  theme.rs  ui.rs  warm.rs
src/_hook_scripts/: session-end.sh  session-start.sh  user-prompt-submit.sh
tests/: hook_scripts.rs
