[package]
name = "duru"
version = "0.4.0"
edition = "2024"
description = "Terminal dashboard for Claude Code — explore, manage, and monitor your setup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uppinote20/duru"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
dirs = "6"
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
terminal-colorsaurus = "1"

[dev-dependencies]
tempfile = "3"
